templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: in
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /app1(/|$)(.*)
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /app2(/|$)(.*)
      - backend:
          serviceName: webapp3-svc
          servicePort: 4200
        path: /app3(/|$)(.*)
      - backend:
          serviceName: webapp4-svc
          servicePort: 3000
        path: /app4/(/|$)(.*)  
      - backend:
          serviceName: php-phppgadmin-chart 
          servicePort: 8080
        path: /php(/|$)(.*)  
  - host: frontend.hieu.20.211.143.10.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: webapp1-svc
          servicePort: 80
        path: /app1
      - backend:
          serviceName: webapp2-svc
          servicePort: 80
        path: /app2
      - backend:
          serviceName: webapp3-svc
          servicePort: 4200
        path: /app3
      - backend:
          serviceName: webapp4-svc
          servicePort: 3000
        path: /app4/
      - backend:
          serviceName: php-phppgadmin-chart 
          servicePort: 8080
        path: /php(/|$)(.*)
